--- a/src/comp/home.css
+++ b/src/comp/home.css
@@ -1,3 +1,13 @@
+.navbar{
+  text-align: right;
+  padding: 0 15%;
+}
+
+a{
+  text-decoration: none;
+  color: blue;
+}
+
 .App-logo {
     display: flex;
     padding: 10px;
