--- a/src/comp/HomeComp/home.css
+++ b/src/comp/HomeComp/home.css
@@ -1,5 +1,10 @@
 .homepage{
-    border: red 1px solid;
+    background-color: rgb(198, 194, 194);
+    /* change to a more suitable height later */ 
+    margin: 0 10%;
+    padding: 3%;
+    border-radius: 7px;
+    position: relative;
 }
 
 .choice-block{
@@ -10,13 +15,15 @@
 }
 
 .drop-menu{
-    margin: 0 2%;
+    margin: 0 9%;
+    background-color: white;
 }
 
 .drop-menu-contents{
     display: flex;
     flex-direction: column;
     border: 1px solid grey;
+    background-color: transparent;
 }
 
 .drop-menu-contents-button{
@@ -35,7 +42,7 @@
 .display-block{
     display: flex;
     justify-content: center;
-    margin: 2vmin;
+    padding-top: 35px;
 }
 
 .homepage-title-block{
@@ -44,6 +51,12 @@
 
 .ExRate{
     padding: 1vmin 2vmin;
-    border-bottom: 1px solid black;
-    border-right: 1px solid black;
+    border-left: 1px solid black;
+    border-top: 1px solid black;
+    background-color: #ffffff;
+}
+
+.exchange-block{
+    display: flex;
+    flex-direction: column;
 }
