--- a/src/comp/header.css
+++ b/src/comp/header.css
@@ -6,9 +6,8 @@
 
 .App-logo {
     display: flex;
-    padding: 10px;
-    margin: 0 auto;
-    height: 8vmin;
+    padding: 3px;
+    height: 5vmin;
   }
 
 .header{
@@ -20,6 +19,7 @@ text-align: center;
 font-size: 4vmin;
 margin: 0 auto;
 border-bottom: solid black 1px;
+margin-top: -10%;
 }
 
 .header-tagline{
